# vm2

./: .clippy.toml  .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  RELEASE.md  crates.js  deny.toml  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: pull_request_template.md
.github/release-please/: config.json
.github/workflows/: cargo-deny.yml  cargo-license.yaml  ci.yml  pr-title.yml  publish-crates.yml  release-please-prepare-branch.yml  release-please.yml
afl-fuzz/: Cargo.toml  README.md  fuzz.sh
afl-fuzz/in/: RandomNumbers  kernel_to_msg_value_far_call  return_calldata
afl-fuzz/src/: check_input_size.rs  lib.rs  main.rs  show_testcase.rs
benches/: nested_near_call.rs
crates/vm2/: Cargo.toml  README.md
crates/vm2-interface/: Cargo.toml  README.md
crates/vm2-interface/src/: lib.rs  state_interface.rs  tracer_interface.rs
crates/vm2/benches/: nested_near_call.rs
crates/vm2/src/: addressing_modes.rs  bitset.rs  callframe.rs  decode.rs  decommit.rs  fat_pointer.rs  heap.rs  instruction.rs  lib.rs  mode_requirements.rs  page_ids.rs  precompiles.rs  predication.rs  program.rs  rollback.rs  stack.rs  state.rs  testonly.rs  testworld.rs  tracing.rs  vm.rs  world_diff.rs
crates/vm2/src/instruction_handlers/: binop.rs  common.rs  context.rs  decommit.rs  event.rs  far_call.rs  heap_access.rs  jump.rs  mod.rs  near_call.rs  nop.rs  pointer.rs  precompiles.rs  ret.rs  storage.rs
crates/vm2/src/precompiles/: legacy.rs  mod.rs
crates/vm2/src/single_instruction_test/: callframe.rs  heap.rs  into_zk_evm.rs  mock_array.rs  mod.rs  print_mock_info.rs  program.rs  scenario.rs  stack.rs  state_to_zk_evm.rs  universal_state.rs  validation.rs  vm.rs  world.rs
crates/vm2/src/tests/: abort_unwind.rs  bytecode_behaviour.rs  divergence_regressions.rs  far_call_decommitment.rs  frame_stipend_counter.rs  memory_ceiling.rs  mod.rs  panic.rs  stipend.rs  trace_failing_far_call.rs  tx_wide_revert.rs
crates/vm2/tests/: bytecode_behaviour.rs  far_call_decommitment.rs  panic.rs  stipend.rs
eravm-stable-interface/: Cargo.toml
eravm-stable-interface/src/: lib.rs  state_interface.rs  tracer_interface.rs
fuzz/: Cargo.toml  fuzz.sh
fuzz/fuzz_targets/: fuzz_target_1.rs
proptest-regressions/: world_diff.txt
search.desc/zksync_vm2/: zksync_vm2-desc-0-.js
search.desc/zksync_vm2_interface/: zksync_vm2_interface-desc-0-.js
search.index/: 005407034655.js  01c42950506a.js  073cc695cded.js  0743c3684a1c.js  089baa3ae330.js  0a84c1074860.js  0aa50f022763.js  0bf3779d1f2c.js  0d98ec7845e8.js  0ee401742730.js  0f3e8aad450b.js  0f8efbe62436.js  10e392546a56.js  1288a674aef6.js  142c25efba49.js  15ae9f6611a0.js  1678022af2fa.js  16cbd4054051.js  1739d7c5fd0f.js  198cb77cb8d4.js  19ac425e3976.js  1ac0f8ff9114.js  1b4844bd052b.js  1be018c3d806.js  1c49492d0876.js  1ccea4758434.js  1d8ff1ad8742.js  1e9ad35b5308.js  1ea106b22d97.js  1eff8840a53c.js  1f0dec2b671e.js  20b4d076b5fc.js  23613c735dde.js  244996977d59.js  25ce6e5df5e8.js  27514188ca76.js  2b2a5f3190e1.js  2b79a5c63e79.js  2c48cb6a721d.js  2c497f397a67.js  (+77 more)
search.index/crateNames/: bcd659d550bc.js
search.index/desc/: 40a2f00b5555.js  954e9fdb8d4c.js
search.index/entry/: 68c76479eef9.js  cb6a73c549a3.js
search.index/function/: 4de1136b02c1.js  66a30ccf7c97.js
search.index/generic_inverted_index/: 0621665b0793.js  c99eec666020.js
search.index/name/: 7d1dd7fcc55b.js  d81ab8b64912.js
search.index/normalizedName/: 167e1d3ab7f2.js  a8550dd26abc.js
search.index/path/: 3949c4dba176.js  6c365c152df6.js
search.index/type/: a74f5934324b.js  efc0e2ff1750.js
src/: addressing_modes.rs  arbitrary_instruction.rs  bitset.rs  callframe.rs  compression.rs  decode.rs  decommit.rs  fat_pointer.rs  heap.rs  instruction.rs  keccak.rs  lib.rs  main.rs  mode_requirements.rs  modified_world.rs  predication.rs  program.rs  rollback.rs  stack.rs  state.rs  testworld.rs  tracing.rs  vm.rs  world_diff.rs
src/instruction_handlers/: binop.rs  call.rs  common.rs  context.rs  counter.rs  decommit.rs  event.rs  far_call.rs  heap_access.rs  jump.rs  keccak.rs  mod.rs  monomorphization.rs  near_call.rs  nop.rs  pointer.rs  precompiles.rs  ret.rs  storage.rs
src/single_instruction_test/: callframe.rs  heap.rs  into_zk_evm.rs  mock_array.rs  mod.rs  print_mock_info.rs  program.rs  stack.rs  state_to_zk_evm.rs  universal_state.rs  validation.rs  vm.rs  world.rs
src/zksync_vm2/: addressing_modes.rs.html  bitset.rs.html  callframe.rs.html  decode.rs.html  decommit.rs.html  fat_pointer.rs.html  heap.rs.html  instruction.rs.html  lib.rs.html  mode_requirements.rs.html  page_ids.rs.html  predication.rs.html  program.rs.html  rollback.rs.html  stack.rs.html  state.rs.html  testonly.rs.html  tracing.rs.html  vm.rs.html  world_diff.rs.html
src/zksync_vm2_interface/: lib.rs.html  state_interface.rs.html  tracer_interface.rs.html
tests/: bytecode_behaviour.rs  far_call_decommitment.rs  panic.proptest-regressions  panic.rs  stipend.rs
tests/afl-fuzz/: Cargo.toml  README.md  fuzz.sh  show_crash.sh
tests/afl-fuzz/in/: kernel_to_msg_value_far_call_forward_fat_pointer
tests/afl-fuzz/src/: check_input_size.rs  divergence_validator.rs  lib.rs  main.rs  scenario.rs  show_testcase.rs
tests/bytecodes/: call_far
zksync_vm2/: all.html  enum.ExecutionEnd.html  enum.Predicate.html  index.html  sidebar-items.js  struct.FatPointer.html  struct.Instruction.html  struct.ModeRequirements.html  struct.Program.html  struct.Settings.html  struct.Snapshot.html  struct.StorageChange.html  struct.StorageSlot.html  struct.StorageWriteEntry.html  struct.VirtualMachine.html  struct.WorldDiff.html  trait.StorageInterface.html  trait.World.html
zksync_vm2_interface/: all.html  enum.CallingMode.html  enum.CycleStats.html  enum.Opcode.html  enum.ReturnType.html  enum.ShouldStop.html  index.html  sidebar-items.js  struct.Event.html  struct.Flags.html  struct.HeapId.html  struct.L2ToL1Log.html  trait.CallframeInterface.html  trait.GlobalStateInterface.html  trait.OpcodeType.html  trait.StateInterface.html  trait.Tracer.html
(+206 files in other folders)
