[package]
name = "vm2"
version = "0.1.0"
edition.workspace = true
homepage = "https://zksync.io/"
license.workspace = true
authors.workspace = true

[dependencies]
eravm-stable-interface = { path = "./eravm-stable-interface" }
zkevm_opcode_defs = "0.150.0"
zk_evm_abstractions = "0.150.0"
u256 = { package = "primitive-types", version = "0.12.1" }
enum_dispatch = "0.3"

# Optional dependencies (used for fuzzing)
arbitrary = { version = "1", features = ["derive"], optional = true }
# The commit incorporates a fix necessary for fuzzing to work correctly.
zk_evm = { git = "https://github.com/matter-labs/era-zk_evm.git", rev = "b7caa02acc2119b2994730d92c8cb6b861f56484", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
divan = "0.1"
proptest = "1.4"

[[bench]]
name = "nested_near_call"
harness = false

[features]
default = []
trace = []
single_instruction_test = ["arbitrary", "u256/arbitrary", "zk_evm", "anyhow"]

[workspace]
members = [".", "afl-fuzz", "eravm-stable-interface"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]