[workspace]
members = [
    # Main published library crates
    "crates/vm2-interface",
    "crates/vm2",
    # Testing crates
    "tests/afl-fuzz"
]
resolver = "2"

[workspace.package]
version = "0.3.0" # x-release-please-version
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/vm2"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
# "External" dependencies
afl = "0.15"
anyhow = "1"
arbitrary = "1"
divan = "0.1"
enum_dispatch = "0.3"
pretty_assertions = "1.4.0"
primitive-types = "0.12.1"
proptest = "1.4"

# "Internal" dependencies
zkevm_opcode_defs = "0.150.0"
zk_evm_abstractions = "0.150.0"
zk_evm = "0.150.5"

# Dependencies within the workspace
zksync_vm2_interface = { version = "0.3.0", path = "crates/vm2-interface" }
zksync_vm2 = { version = "0.3.0", path = "crates/vm2" }

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
inline_always = "allow"
struct_field_names = "allow"
