[package]
name = "differential_fuzzing"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
afl = "0.15"
arbitrary = "1"
pretty_assertions = "1.4.0"

[dependencies.vm2]
path = ".."
features = ["single_instruction_test"]

[dependencies.eravm-stable-interface]
path = "../eravm-stable-interface"

[[bin]]
name = "show_testcase"
path = "src/show_testcase.rs"

[[bin]]
name = "check_input_size"
path = "src/check_input_size.rs"
